[metadata]
name = little-cheesemonger
author = Chris Antonellis
author_email = cantonellis@wayfair.com
version = attr: little_cheesemonger.__version__
description = Modify an environment to build and bundle a Python package into a manylinux wheel.
long_description = file: README.md
long_description_content_type = text/markdown
license = See LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]

python_requires = >=3.6
install_requires = 
    click>=7.1,<9
    toml==0.10.2
    typing-extensions~=3.7;python_version<"3.8"
packages = find:

[options.package_data]

little_cheesemonger = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"

[options.entry_points]
console_scripts =
    little-cheesemonger = little_cheesemonger._cli:entrypoint
